Alignment issue resolved

--- a/Frontend/src/app/components/start-grid/start-grid.component.scss
+++ b/Frontend/src/app/components/start-grid/start-grid.component.scss
@@ -11,13 +11,12 @@
 }
 
 .stratGrid {
-
-
-  background-color: black;
   margin: auto;
 
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+
 
   row-gap: 10px;
 
